maybe step7 is done

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -16,11 +16,9 @@ RUN go mod tidy
 RUN go get github.com/mattn/go-sqlite3 go.uber.org/mock/gomock
 
 # プロジェクトのソースコードをコピー
-# 必要なファイルだけ正しい場所にコピー
-COPY go/cmd/api /app/cmd/api
-COPY go/app /app/app
-COPY go/db /app/db
-COPY go/items.json /app/items.json
+# 正しいパスに修正
+COPY cmd/api /app/cmd/api
+COPY app /app/app
 
 # ビルド
 RUN go build -o main /app/cmd/api/main.go
@@ -29,24 +27,16 @@ RUN go build -o main /app/cmd/api/main.go
 FROM alpine:latest
 
 # 必要なライブラリをインストール
-# Dockerfileの途中でインストール結果を確認
-RUN apk update --no-cache && apk add --no-cache sqlite && sqlite3 --version
-
+RUN apk update --no-cache && apk add --no-cache sqlite # sqlite3 パッケージをインストール
 
 # 作業ディレクトリを /root に設定
 WORKDIR /root
 
 # ビルドしたバイナリをコンテナにコピー
 COPY --from=builder /app/main .
-COPY go/items.json ./items.json
-COPY go/db ./db
 
-# ポート9000を開放
-EXPOSE 9000
+# ポート8080を開放
+EXPOSE 8080
 
 # 実行時に main バイナリを実行
 CMD ["./main"]
-
-# コンテナ内での画像保存場所を指定
-VOLUME ["/app/images"]
-
